--- a/RGB LED Cube/Debug/Makefile
+++ b/RGB LED Cube/Debug/Makefile
@@ -43,7 +43,8 @@ C_SRCS +=  \
 ../Source\ files/Display.c \
 ../Source\ files/LED_Drivers.c \
 ../Source\ files/Multiplexing.c \
-../Source\ files/SPI.c
+../Source\ files/SPI.c \
+../Source\ files/UART.c
 
 
 PREPROCESSING_SRCS += 
@@ -57,28 +58,32 @@ main.o \
 Source\ files/Display.o \
 Source\ files/LED_Drivers.o \
 Source\ files/Multiplexing.o \
-Source\ files/SPI.o
+Source\ files/SPI.o \
+Source\ files/UART.o
 
 OBJS_AS_ARGS +=  \
 main.o \
 "Source files/Display.o" \
 "Source files/LED_Drivers.o" \
 "Source files/Multiplexing.o" \
-"Source files/SPI.o"
+"Source files/SPI.o" \
+"Source files/UART.o"
 
 C_DEPS +=  \
 main.d \
 Source\ files/Display.d \
 Source\ files/LED_Drivers.d \
 Source\ files/Multiplexing.d \
-Source\ files/SPI.d
+Source\ files/SPI.d \
+Source\ files/UART.d
 
 C_DEPS_AS_ARGS +=  \
 main.d \
 "Source files/Display.d" \
 "Source files/LED_Drivers.d" \
 "Source files/Multiplexing.d" \
-"Source files/SPI.d"
+"Source files/SPI.d" \
+"Source files/UART.d"
 
 OUTPUT_FILE_PATH +=RGB\ LED\ Cube.elf
 
@@ -123,6 +128,13 @@ Source\ files/Multiplexing.o: ../Source\ files/Multiplexing.c
 	
 
 Source\ files/SPI.o: ../Source\ files/SPI.c
+	@echo Building file: $<
+	@echo Invoking: AVR/GNU C Compiler : 5.4.0
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.2.132\include"  -O1 -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega328p -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.2.132\gcc\dev\atmega328p" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
+Source\ files/UART.o: ../Source\ files/UART.c
 	@echo Building file: $<
 	@echo Invoking: AVR/GNU C Compiler : 5.4.0
 	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.2.132\include"  -O1 -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega328p -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.2.132\gcc\dev\atmega328p" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
